tests/baselines/reference/privateNamesAndDecorators.errors.txt
privateNamesAndDecorators.ts(4,5): error TS1206: Decorators are not valid here.
privateNamesAndDecorators.ts(6,5): error TS1206: Decorators are not valid here.


==== privateNamesAndDecorators.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    class A {
        @dec                // Error
        ~
!!! error TS1206: Decorators are not valid here.
        #foo = 1;
        @dec                // Error
        ~
!!! error TS1206: Decorators are not valid here.
        #bar(): void { }
    }
    